Revision history for Perl module JSON::Tiny

0.41 2014-02-19
  - ADDED decode_json and encode_json functions.
  - Fixed small decoding error.
  - Minor optimizations.
  - Handle encoding errors more gracefully.
  - Fixed line numbers in error messages.

0.40 2014-01-16
  - Minor optimization in encode().
  - RFC mention in POD now links to the RFC.
  - Makefile.PL: Fixed small bug with PREREQ_PM hashref.

0.39 2013-12-04
  - POD refinements.

0.38 2013-12-03
  - ACKNOWLEDGEMENTS recognizes that chansen's GitHub Gist was Mojo::JSON's
    foundation.

0.37 2013-11-21
  - Removed useless minimum dependency version checks from Makefile.PL.
  - JSON::Tiny is not relaxed (POD update).

0.36 2013-11-08
  - JSON::Tiny had incorrect value associated with escaped special
    character \b (was \x07). Now it's correctly associated with 0x08.
  - Tests added to prove fix.
  - Sync with Mojo::JSON commit 42fb62087a, etc. from 2014-11-08.

0.35 2013-10-16
  - References to a scalar (even if blessed) will encode to Boolean types.

0.34 2013-10-15
  - Added t/22-bool.t to test overriding Boolean decoding behavior.
  - Documented overriding Booleans.

0.33 2013-10-15
  - Change 'my $TRUE' and 'my $FALSE' to 'our' so users can override
    Booleans if desired. (http://perlmonks.org/?node_id=1058232)
  - Added additional META info via Makefile.PL (Git repo, Meta spec versn.)

0.32 2013-06-22
  - j() dies with useful error message on non-parsable JSON.
  - Document that j() will throw exception on failure to decode.
  - Minor performance tweaks.
  - Known issues: Perl 5.8.9 or older: May segfault on decoding JSON
    with strings larger than 22k.

0.31 2013-06-19
  - Improved documentation on Exporter dependency for Pre-5.8.4 Perl.
  
0.30 2013-06-19
  - Pushed minimum Perl version back to 5.8.4 (was 5.10). (tye)
  - Document under INCOMPATIBILITIES about upgrading Exporter to facilitate
    running under earlier Perl versions.

0.29 2013-06-18
  - Added tests for empty keys.